# Jekbot

./: .gitignore  Audit.cs  Cargo.toml  ConfigFile.cs  Database.cs  Instance.cs  Jekbot.csproj  Jekbot.sln  Orchestrator.cs  Program.cs  README.md  Store.cs  build_for_pi.bat
Models/: ActionTimer.cs  BotFeature.cs  HandledEvent.cs  ModelBase.cs  PinnedMessage.cs  RotationEntry.cs  RsvpAway.cs  TrackedEvent.cs
Modules/: AdminModule.cs  CommandsHandler.cs  EmojiAgreeModule.cs  EventNotifyModule.cs  GuildCommandModule.cs  MessageProxyModule.cs  ReactionWatcherModule.cs  RotationModule.cs
OddlySpecific.Logging/: Logger.Core.cs  Logger.Methods.cs
Properties/: GlobalSuppressions.cs  launchSettings.json
Resources/: ConfigFile.cs  Database.cs
Services/: AppLoggingService.cs  CommandsHandlerService.cs  EventNotifyService.cs  MessageProxyService.cs  PinService.cs  ReactionWatcherService.cs  RotationService.cs  SchedulerService.cs  TimezoneProviderService.cs
Systems/: ActionTimerSystem.cs  AppLoggingSystem.cs  PersistenceSystem.cs  PinSystem.cs  RotationSystem.cs  TimezoneProvider.cs
TypeConverters/: GuildPermissionsTypeConverter.cs  NodaInstantConverter.cs  NodaInstantJsonConverter.cs  TimezoneAutoComplete.cs
Utility/: AsyncExtensions.cs  AutoDiscoverImplementationsAttribute.cs  AutoDiscoverSingletonServiceAttribute.cs  BytesFormatter.cs  Disposable.cs  FastAccessor.cs  ForceInitializationAttribute.cs  GuildEventUtility.cs  InfrequentActor.cs  LiteDbUtility.cs  PreparableResource.cs  ResourceEnvironment.cs
src/: config.rs  main.rs
(+18 files in other folders)
