[package]
name = "jekbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
ron = "0.7"
tokio = { version = "1", features = ["full"] }

[dependencies.serde]
version = "1"
features = ["derive"]